css/index.css
body{
  overflow: hidden;
}

.background-index {
  background-size: cover;
  overflow: hidden;
  background-color: blueviolet;
  background-image: linear-gradient(
    43deg,
    #4158d0 0%,
    blueviolet 46%,
    #ff70f6 100%
  );
}

.small-title {
  color: whitesmoke;
  margin: 20px;
  font-size: 35px;
}

.index-button {
  padding: 20px 0px;
  margin: 100px;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0.8);
  color: blueviolet;
  font-size: 25px;
  width: 250px;
  outline: inherit;
  border: none;
  text-decoration: none;
}

.logo-index {
  font-family: "Shizuru";

  color: whitesmoke;
  font-size: 70px;
  margin: auto;
}

@media only screen and (max-width: 800px) {
  .index-button {
    margin: 40px;
  }

  .ligne {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
}

